[gd_scene load_steps=2 format=3 uid="uid://cemrnm35iqawe"]

[ext_resource type="Script" path="res://src/main/food/item.gd" id="1_db2lv"]

[node name="Item" type="TextureRect"]
custom_minimum_size = Vector2(20, 20)
expand_mode = 1
script = ExtResource("1_db2lv")

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 19.0
offset_right = 123.0
offset_bottom = 85.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Use" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Использовать"

[node name="Throw" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Бросить"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Use" to="." method="_on_use_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Throw" to="." method="_on_throw_pressed"]
